--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         </div>
                         <div class="search_input">
 
-                            <input type="text" class="name-input" placeholder="이름">
+                            <input type="text" class="name-input" placeholder="검색">
 
 
                             <div class="search_box">
                                 최근 검색 항목
                                 <div class="diamond">
-                                    <h1>Todo List</h1>
+                     
 
 
                                 </div>
